Removed PathMatchers again