@@ -270,7 +270,6 @@
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.extension=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.extension.testresource=org.junit.platform.commons
-                --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.matchers.nio.file=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.params=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.test=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.test.collections=org.junit.platform.commons
